--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -31,7 +31,7 @@ displayURL="https://discord.gg/hEwj2kGXNP"
 
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="randumb_logo.png"
-
+#logoBlur=true
 # A text field displayed in the mod UI
 #credits="" #optional
 
