Updated build.gradle to implement DevAuth

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ group = mod_group_id
 
 repositories {
     // Add here additional repositories if required by some of the dependencies below.
+
+    // DevAuth allows me to safely login into the game when in a dev environment.
+    // You can learn more about it here: https://github.com/DJtheRedstoner/DevAuth
+    maven { url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1" }
 }
 
 base {
@@ -133,6 +137,7 @@ dependencies {
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
+    runtimeOnly("me.djtheredstoner:DevAuth-neoforge:1.2.1")
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
