Updated gradle.properties to new license

--- a/gradle.properties
+++ b/gradle.properties
@@ -28,7 +28,7 @@ mod_id=randumb
 # The human-readable display name for the mod.
 mod_name=Randumb+
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=GPL-3.0
 # The mod version. See https://semver.org/
 mod_version=0.0.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
@@ -36,6 +36,6 @@ mod_version=0.0.1
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=dev.thecasual.randumb
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=ItsmeJack, thecasualdev
+mod_authors=rook_3, thecasualdev
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Just adds random stuff, I guess.
