--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -27,7 +27,7 @@ displayName="${mod_name}" #mandatory
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 
 # A URL for the "homepage" for this mod, displayed in the mod UI
-displayURL="https://discord.gg/hEwj2kGXNP"
+displayURL="https://go.thecasual.dev/randumb"
 
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="randumb_logo.png"
